second commit by wangxinlu

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 			<H1 class="section-header about-header"><SPAN class="orange">工作室</SPAN> 
 			</H1>
 			<P>大学生IT创新工作室 简称工作室，隶属于现代教育技术中心，是一个网络中心
-			领导的学生开发者团队，其前身是1999年组建的网络中心开发小组。</P>
+			领导的学生开发者团队。</P>
 			<P>“大学生IT工作室”的宗旨是：面向社会需求，
 			培养大学生IT精英，在广大学生中营造理论联系实践，
 			团队协作，勇于实践创新的氛围</P>
