third commit by wangxinlu

--- a/index.html
+++ b/index.html
@@ -100,13 +100,12 @@
 			<DIV class="service-container-img"><IMG class="service-img" alt="" src="images/service-01.svg" > </DIV>
 			<DIV class="service-container-text">
 			<H2 class="service-header">Web产品开发</H2>
-			<P class="service-description">用Java Web（主流方向）,php Web，<BR> iOS and 
-			Android platforms.</P></DIV></DIV>
+			<P class="service-description">Java Web（主流方向Jsp、SSH框<BR> 架使用）及Ajax异步交互应用.</P></DIV></DIV>
 			<DIV class="service">
 			<DIV class="service-container-img"><IMG class="service-img" alt="" src="images/service-03.svg" > </DIV>
 			<DIV class="service-container-text">
 			<H2 class="service-header">UI设计</H2>
-			<P class="service-description">我们进行简单，直观的界面，<BR> 
+			<P class="service-description">我们进行简单，直观的界面设计，<BR> 
 			以提供最佳的用户体验。</P></DIV></DIV></DIV>
 			<DIV class="row">
 			<DIV class="service">
