fifth commit by wangxinlu

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<DIV id="top-header">
 				<DIV class="header-container"><HEADER class="header" id="header">
 					<DIV class="content">
-					<DIV class="logo-container"><A class="logo nav-link" href="http://www.zzuli.edu.cn/">
+					<DIV class="logo-container"><A class="logo nav-link" href="#">
 					<IMG alt="Logo" src="images/zzuli.png" > 
 					</A> </DIV>
 					<DIV class="top-menu full-only" id="top-menu">
